--- a/index.html
+++ b/index.html
@@ -8,6 +8,94 @@
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins:wght@300;400&display=swap');
 
+        /* Password Screen */
+        .password-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(circle at top, #ffb3c6, #ff4d6d);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 10000;
+            visibility: visible;
+            opacity: 1;
+            transition: opacity 0.5s ease;
+        }
+
+        .password-screen.hidden {
+            visibility: hidden;
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        .password-container {
+            background: white;
+            padding: 50px;
+            border-radius: 25px;
+            text-align: center;
+            box-shadow: 0 20px 60px rgba(0,0,0,0.4);
+            max-width: 400px;
+            animation: popIn 0.5s ease;
+        }
+
+        .password-container h2 {
+            font-family: 'Playfair Display', serif;
+            color: #ff4d6d;
+            font-size: 2em;
+            margin-bottom: 10px;
+        }
+
+        .password-container p {
+            color: #444;
+            font-size: 1em;
+            margin-bottom: 25px;
+        }
+
+        .password-input {
+            width: 100%;
+            padding: 15px;
+            font-size: 1.1em;
+            border: 2px solid #ffb3c6;
+            border-radius: 10px;
+            margin-bottom: 15px;
+            box-sizing: border-box;
+            text-align: center;
+            letter-spacing: 3px;
+        }
+
+        .password-input:focus {
+            outline: none;
+            border-color: #ff4d6d;
+            box-shadow: 0 0 10px rgba(255, 77, 109, 0.3);
+        }
+
+        .password-btn {
+            background: #ff4d6d;
+            color: white;
+            padding: 12px 30px;
+            font-size: 1.1em;
+            border: none;
+            border-radius: 50px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            width: 100%;
+        }
+
+        .password-btn:hover {
+            transform: scale(1.05);
+            box-shadow: 0 8px 20px rgba(255, 77, 109, 0.4);
+        }
+
+        .error-message {
+            color: #ff4d6d;
+            font-size: 0.9em;
+            margin-top: 10px;
+            display: none;
+        }
+
         body {
             font-family: 'Poppins', sans-serif;
             background: radial-gradient(circle at top, #ffb3c6, #ff4d6d);
@@ -193,6 +281,19 @@
         </style>
         
         </head>
+
+<!-- Password Screen -->
+<div id="passwordScreen" class="password-screen">
+  <div class="password-container">
+    <h2>🔐 Enter Password</h2>
+    <p> is a special message for you</p>
+    <p>Hint: Your passcode on your phone</p>
+    <input type="password" id="passwordInput" class="password-input" placeholder="Enter password" onkeypress="if(event.key === 'Enter') checkPassword()">
+    <button class="password-btn" onclick="checkPassword()">Unlock 💕</button>
+    <div class="error-message" id="errorMessage">❌ Wrong password, try again</div>
+  </div>
+</div>
+
 <!-- Success Modal -->
 <div id="successModal" class="modal">
   <div class="modal-content">
@@ -230,6 +331,28 @@
 
         </div>
 <script>
+
+// Password check
+const CORRECT_PASSWORD = "1370";
+
+function checkPassword() {
+    const inputPassword = document.getElementById("passwordInput").value;
+    const errorMessage = document.getElementById("errorMessage");
+    
+    if (inputPassword === CORRECT_PASSWORD) {
+        document.getElementById("passwordScreen").classList.add("hidden");
+        errorMessage.style.display = "none";
+    } else {
+        errorMessage.style.display = "block";
+        document.getElementById("passwordInput").value = "";
+        document.getElementById("passwordInput").focus();
+    }
+}
+
+// Focus on password input on load
+window.addEventListener("load", () => {
+    document.getElementById("passwordInput").focus();
+});
 
 // Floating hearts
 setInterval(() => {
